added a volume unit to the project
now users can convert volume measurements too. The ones I've added are liters, milliliters, cubicmeters, gallons, and floz

--- a/popup.html
+++ b/popup.html
@@ -67,6 +67,7 @@
             <option value="currency">Currency</option>
             <option value="length">Length</option>
             <option value="weight">Weight</option>
+            <option value="volume">Volume</option>
         </select>
         
         <input type="number" id="amount" placeholder="Enter value">
